<resources>
    <string name="app_name">NewsReader</string>
    <string-array name="urls">
        <item name="videosUrl">yada</item>
        <item name="newsUrl">yada</item>
        <item name="roiEidisewnUrl">yada</item>
        <item name="politikiUrl">yada</item>
        <item name="arthraUrl">yada</item>
        <item name="vouliUrl">yada</item>
        <item name="eurovouliUrl">yada</item>
        <item name="istoriaUrl">yada</item>
        <item name="eklogesUrl">yada</item>
        <item name="topikiDioikisiUrl">yada</item>
        <item name="oikonomiaUrl">yada</item>
        <item name="ygeiaUrl">yada</item>
        <item name="koinwnikiAsfalisiUrl">yada</item>
        <item name="autoapasholoumenoiUrl">yada</item>
        <item name="gunaikaUrl">yada</item>
        <item name="agrotesUrl">yada</item>
        <item name="sintaxiouhoiUrl">yada</item>
        <item name="neolaia_paideiaUrl">yada</item>
        <item name="kosmosUrl">yada</item>
        <item name="athlitismosUrl">yada</item>
        <item name="politismosUrl">yada</item>
        <item name="kinimatografosUrl">yada</item>
        <item name="theatroUrl">yada</item>
        <item name="mousikiUrl">yada</item>
        <item name="eikastikaUrl">yada</item>
        <item name="epistimiUrl">yada</item>
        <item name="koinwniaUrl">yada</item>
        <item name="mmeUrl">yada</item>
        <item name="apopseisSholiaUrl">yada</item>
    </string-array>
    <string name="video">Videos</string>
    <string name="news">Πρωτοσέλιδα Εφημερίδων</string>
    <string name="roiEidisewn">Ροή Ειδήσεων</string>
    <string name="politiki">Πολιτική</string>
    <string name="arthra">Άρθρα</string>
    <string name="vouli">Βουλή</string>
    <string name="eurovouli">Ευρωβουλή</string>
    <string name="istoria">Ιστορία</string>
    <string name="ekloges">Εκλογές</string>
    <string name="topikiDioikisi">Τοπική Διοίκηση</string>
    <string name="oikonomia">Οικονομία</string>
    <string name="ygeia">Υγεία</string>
    <string name="koinwnikiAsfalisi">Κοινωνική Ασφάλιση</string>
    <string name="autoapasholoumenoi">Αυτοαπασχολούμενοι</string>
    <string name="gunaika">Γυναίκα</string>
    <string name="agrotes">Αγρότες</string>
    <string name="sintaxiouhoi">Συνταξιούχοι</string>
    <string name="neolaia_paideia">Νεολαία/Παιδεία</string>
    <string name="kosmos">Κόσμος</string>
    <string name="athlitismos">Αθλητισμός</string>
    <string name="politismos">Πολιτισμός</string>
    <string name="kinimatografos">Κινηματογράφος</string>
    <string name="theatro">Θέατρο</string>
    <string name="mousiki">Μουσική</string>
    <string name="eikastika">Εικαστικά</string>
    <string name="epistimi">Επιστήμη</string>
    <string name="koinwnia">Κοινωνία</string>
    <string name="mme">ΜΜΕ</string>
    <string name="apopseisSholia">Απόψεις/Σχόλια</string>
    <string name="drawer_open">Διαλέξτε Κατηγορία Ειδήσεων</string>
    <string name="drawer_close">Ειδήσεις</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="drawer_menu_text">Κατηγορίες Ειδήσεων</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="links">Σύνδεσμοι</string>
    <string name="webradio2">yada FM</string>
    <string name="title_activity_page_view">Επιλογή Συνδέσμου</string>
    <string name="description2">Εικόνα για τον σύνδεσμο του συγκεκριμένου site</string>
    <string name="image_desc">image</string>
    <string name="icon_description">icon</string>
    <string name="buttonPlay">Play</string>
    <string name="buttonStopPlay">Stop</string>
    <string name="logo">logo</string>
    <string name="refreshButton">Ανανέωση</string>
    <string name="webradio">yada webradio</string>
    <string name="saveButton">Save</string>
    <string name="moto">moto</string>
    <string name="programa">Ανανέωση Προγράμματος</string>
    <string name="programText">Πρόγραμμα Webradio:</string>
    <string name="newspaper">Πρωτοσέλιδο Εφημερίδας</string>
    <string name="eikona">eikona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
