<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical"
  	android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:gravity="center"
  	android:background="#fff">
	<ImageView
	    android:id="@+id/logo"
	    android:layout_width="120dp"
	    android:layout_height="61dp"
	    android:src="@drawable/webradio2"
	    android:contentDescription="@string/logo"/>
	<LinearLayout 
	    android:orientation="horizontal"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content">
		<Button
		    android:id="@+id/buttonPlay"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/buttonPlay"/>
		<Button
		    android:id="@+id/buttonStopPlay"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/buttonStopPlay"/>
	</LinearLayout>
	<ProgressBar
	    android:visibility="invisible"
	    android:id="@+id/circularProgressBar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
</LinearLayout>
